[package]
name = "pngwhisper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.3.0"
crc = "3.0.1"
fs-err = "2.9.0"
itertools = "0.10.5"
